--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://use.typekit.net/qwg8grf.css");
 
 
+
  *{
      padding: 0;
      margin: 0;
@@ -15,15 +16,51 @@
     font-weight: 700;
     font-style: normal;
  }
+
+ .content{
+    padding-top: 150px;
+    padding-bottom: 10px;
+}
+ 
+
+.user-control{
+    position: absolute;
+    padding: 0;
+    margin: 0;
+    background: #dedede;
+    height: 40px;
+    width: 100%;
+    
+    
+}
+.user-control ul{
+    float: right;
+
+}
+.user-control ul li{
+    line-height: 40px;
+}
+
+.user-control ul li a{
+    color: #282828;
+    font-size: 14px;
+}
+.user-control ul li a:hover{
+    color: #27581e;
+    transition: unset;
+}
  nav{
      position: fixed;
      background: #0e5f25;
      height: 100px;
      width: 100%;
      border: orange;
-     border-bottom: palegreen;
-     border-bottom: 3px solid #56b616;
+     border-bottom: 4px solid #56b616;
  }
+
+ nav img{
+    height: 95%;
+}
  
 
 label.logo{
@@ -72,12 +109,49 @@ a:hover{
     color: white;
     float: right;
     line-height: 100px;
-    margin-right: 40px;
+    margin-right: 15px;
     cursor: pointer;
     display: none;
 }
+
+.checkbtn2{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 100px;
+    margin-right: 15px;
+    cursor: pointer;
+    display: none;
+}
+
 #check{
     display: none;
+}
+
+#check2{
+    display: none;
+}
+
+footer{
+    
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 80px;
+    color: white;
+    background: #478121;
+    font-family: ibm-plex-thai, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.credit{
+    padding-top: 15px;
+
+}
+
+footer div{
+    text-align: center;
 }
 
 
@@ -87,10 +161,22 @@ a:hover{
     nav ul li a{
         font-size: 13px;
     }
+    /* nav ul{
+        float: left;
+    } */
+
 
 }
 
 @media (max-width: 945px){
+    nav{
+        border-bottom: 3px solid #56b616;
+    }
+    nav img{
+        height: 85%;
+        margin-top: 3px;
+        
+    }
    
     label.logo{
         color: white;
@@ -100,7 +186,15 @@ a:hover{
         font-weight: bold;
     }
 
+    .user-control{
+        display: none;
+    }
+
     .checkbtn{
+        display: block;
+    }
+
+    .checkbtn2{
         display: block;
     }
     ul{
@@ -109,14 +203,18 @@ a:hover{
         height: 100vh;
         background: #133f20;
         top: 70px;
-        left: -100%;
+        right: -100%;
         text-align: center;
-        transition: all .5s;
+        transition: all .5s; 
+    }
+    nav ul{
+        margin-right: 0;
     }
     nav{
         height: 70px;
     }
     nav ul li{
+        height: 10px;
         display: block;
         margin: 50px 0;
         line-height: 30px;
@@ -130,12 +228,20 @@ a:hover{
         color: #f5a821;
     }
     #check:checked ~ ul{
-        left: 0;
+        right: 0;
     }
-    .checkbtn{
-
+    .checkbtn,.checkbtn2{
         line-height: 70px;
-
+    }
+  
+    .content{
+        padding-top: 80px;
+        
+    }
+    .credit{
+        font-size: 12px;
+        
     }
 
 }
+
