--- a/css/webstyle.css
+++ b/css/webstyle.css
@@ -1,7 +1,6 @@
 @import url("https://use.typekit.net/qwg8grf.css");
 
 * {
-  
   padding: 0;
   margin: 0;
   text-decoration: none;
@@ -17,8 +16,160 @@ header {
 }
 
 .content {
-  padding-top: 150px;
-  padding-bottom: 10px;
+  display: inline-block;
+  width: 100%;
+  padding-top: 140px;
+  margin-bottom: 40px;
+  /* padding-bottom: 10px; */
+  /* background: red; */
+}
+.content2 {
+  display: inline-block;
+  width: 100%;
+  padding-bottom: 50px;
+  /* background: maroon; */
+}
+.container div {
+  float: left;
+}
+
+.img-grass {
+  /* float: left; */
+
+  float: left;
+  width: 50%;
+
+  /* background: violet; */
+}
+.img-grass img {
+  float: right;
+  margin-right: 30px;
+  width: 100%;
+}
+
+.info-grass1 {
+  /* float: right; */
+  display: inline;
+  padding-left: 30px;
+  float: left;
+  width: 50%;
+  /* background: yellow; */
+}
+
+.info-grass1 .title {
+  font-weight: 900;
+  font-size: 24px;
+  color: #1b1b1b;
+}
+.info-grass1 .detail {
+  margin-top: 15px;
+  color: #656565;
+}
+
+.info-grass1 .list {
+  padding-top: 10px;
+  padding-left: 30px;
+}
+
+.info-grass3 {
+  margin: auto;
+  width: 90%;
+  /* height: 500px; */
+  margin-bottom: 20px;
+  /* background: yellow; */
+}
+.info-grass3 .header{
+  text-align: center;
+  font-weight: 900;
+  font-size: 24px;
+  color: #1b1b1b;
+margin-bottom: 50px;
+}
+.info-grass3 .box-left{
+ 
+  width: 70%;
+  padding-bottom: 30px;
+  margin: 0 auto;
+  /* background: red; */
+
+}
+
+.info-grass3 .box-right{
+ 
+  width: 70%;
+  padding-bottom: 30px;
+  margin: 0 auto;
+  /* background: red; */
+
+}
+
+
+.box-left .mini-img{
+  text-align: center;
+  float: left;
+  width: 25%;
+  
+  /* background: blue; */
+}
+.box-left .mini-img img{
+ 
+  width: 80%;
+;
+}
+.box-left .infomation{
+  padding-left: 20px;
+  float: left;
+  width: 75%;
+  /* background: palevioletred; */
+}
+
+.box-left .infomation .title {
+  font-weight: 700;
+  font-size: 24px;
+  color: #18620f;
+}
+
+.right-text {
+  text-align: right;
+}
+
+.box-left .infomation .detail {
+  margin-top: 10px;
+  color: #8a8a8a;
+}
+
+
+.container {
+  max-width: 85%;
+  margin: 0 auto;
+  /* background: salmon; */
+}
+.bar-hist {
+  max-width: 100%;
+  /* height: 300px; */
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background: #e88f1b;
+}
+
+
+
+.bar-hist .info-grass2{
+  width: 85%;
+  /* background: maroon; */
+  margin: auto;
+
+
+  padding: 10px;
+}
+.info-grass2 .title{
+  font-weight: 900;
+  font-size: 24px;
+  color: #762f13;
+}
+.info-grass2 .detail {
+  margin-top: 15px;
+  color: #fff;
 }
 
 .user-control {
@@ -129,6 +280,8 @@ a:hover {
 }
 
 footer {
+  display: inline-block;
+  position: static;
   padding: 0;
   margin: 0;
   width: 100%;
@@ -140,18 +293,17 @@ footer {
   font-style: normal;
 }
 
-
 footer div {
   text-align: center;
 }
 
-@media (min-width: 945px) and (max-width: 1060px) {
+@media (min-width: 936px) and (max-width: 1060px) {
   nav ul li a {
     font-size: 13px;
   }
 }
 
-@media (max-width: 945px) {
+@media (max-width: 968px) {
   nav {
     border-bottom: 3px solid #56b616;
   }
@@ -250,6 +402,34 @@ footer div {
   }
   .credit {
     font-size: 12px;
+  }
+  .container div {
+    float: none;
+  }
+  .img-grass {
+    width: 100%;
+  }
+
+  .info-grass1 {
+    width: 100%;
+  }
+  .img-grass img {
+    margin-right: 0px;
+  }
+  .box-left .mini-img{
+    text-align: center;
+    width: 100%;
+  }
+  .box-left .mini-img img{
+
+    width: 50%;
+  }
+  .box-left .infomation{
+    width: 100%;
+    padding-left: 0px;
+  }
+  .info-grass3 .box-left{
+    width: 90%;
   }
 
 }
