--- a/css/sign_in.css
+++ b/css/sign_in.css
@@ -3,10 +3,8 @@
 
 .login-page {
   width: 360px;
-  padding-top: 200px;
+  padding-top: 150px;
   margin: auto;
-
-  
 }
 .form {
   position: inherit;
@@ -19,7 +17,7 @@
   /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); */
 }
 .form input {
-    font-family: ibm-plex-thai, sans-serif;
+  font-family: ibm-plex-thai, sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -33,23 +31,32 @@
   font-family: ibm-plex-thai, sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #4caf50;
   width: 100%;
   border: 0;
   padding: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #43a047;
 }
-.form .login-form .warning a{
+.icon-back {
+  text-align: left;
+  font-size: 18px;
+  padding-bottom: 10px;
+}
+.icon-back a {
+  color: #1a1a1a;
+}
+.form .login-form .warning a {
   color: red;
   font-size: 13px;
-
 }
 .form .message {
   margin: 15px 0 0;
@@ -57,17 +64,17 @@
   font-size: 15px;
 }
 .form .message2 {
-    margin: 15px 0 0;
-    color: #979797;
-    font-size: 10px;
-  }
-  .form h2{
-    color: #333333;
-    padding-bottom: 5px;
-  }
+  margin: 15px 0 0;
+  color: #979797;
+  font-size: 10px;
+}
+.form h2 {
+  color: #333333;
+  padding-bottom: 5px;
+}
 .form .message a {
   font-weight: bolder;
-  color: #4CAF50;
+  color: #4caf50;
   text-decoration: none;
 }
 .form .register-form {
@@ -79,7 +86,8 @@
   max-width: 300px;
   margin: 0 auto;
 }
-.container:before, .container:after {
+.container:before,
+.container:after {
   content: "";
   display: block;
   clear: both;
@@ -104,23 +112,20 @@
   text-decoration: none;
 }
 .container .info span .fa {
-  color: #EF3B3A;
+  color: #ef3b3a;
 }
 body {
-    background: #dfdfdf;
-    font-family: ibm-plex-thai, sans-serif;
+  background: #dfdfdf;
+  font-family: ibm-plex-thai, sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (max-width: 945px){
-
-    .login-page {
-        padding-top: 100px;
-    }
-    body {
-        background: #dfdfdf;
-       
-    }
-   
+@media (max-width: 945px) {
+  .login-page {
+    padding-top: 100px;
+  }
+  body {
+    background: #dfdfdf;
+  }
 }
