--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -3,10 +3,8 @@
 
 .login-page {
   width: 360px;
-  padding-top: 200px;
+  padding-top: 150px;
   margin: auto;
-
-  
 }
 .form {
   position: inherit;
@@ -18,12 +16,12 @@
   text-align: center;
   /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); */
 }
-.form .second .switch{
+.form .second .switch {
   margin-top: 5px;
   background: #979797;
 }
 .form input {
-    font-family: ibm-plex-thai, sans-serif;
+  font-family: ibm-plex-thai, sans-serif;
   outline: 0;
   background: #f2f2f2;
   width: 100%;
@@ -34,7 +32,7 @@
   font-size: 14px;
 }
 
-.form select{
+.form select {
   font-family: ibm-plex-thai, sans-serif;
   outline: 0;
   background: #f2f2f2;
@@ -47,39 +45,49 @@
 }
 .form textarea {
   font-family: ibm-plex-thai, sans-serif;
-outline: 0;
-background: #f2f2f2;
-max-width: 100%;
-min-width: 100%;
-width: 100%;
-border: 0;
-margin: 0 0 15px;
-padding: 15px;
-box-sizing: border-box;
-font-size: 14px;
+  outline: 0;
+  background: #f2f2f2;
+  max-width: 100%;
+  min-width: 100%;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
 .form button {
   font-family: ibm-plex-thai, sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #4c87af;
   width: 100%;
   border: 0;
   padding: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
+
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #31607f;
+}
+.icon-back {
+  text-align: left;
+  font-size: 18px;
+  padding-bottom: 10px;
+}
+.icon-back a {
+  color: #1a1a1a;
 }
 
-.form .first .warning a{
+.form .first .warning a {
   color: red;
   font-size: 13px;
-
 }
 .form .message {
   margin: 15px 0 0;
@@ -87,24 +95,23 @@ font-size: 14px;
   font-size: 15px;
 }
 .form .message2 {
-    margin: 15px 0 0;
-    color: #979797;
-    font-size: 10px;
-  }
-  .form h2{
-    color: #333333;
-    padding-bottom: 5px;
-  }
+  margin: 15px 0 0;
+  color: #979797;
+  font-size: 10px;
+}
+.form h2 {
+  color: #333333;
+  padding-bottom: 5px;
+}
 .form .message a {
   font-weight: bolder;
-  color: #4CAF50;
+  color: #4caf50;
   text-decoration: none;
 }
 .form .second {
   display: none;
 }
-.form  .first
-{
+.form .first {
   /* display: none;  */
 }
 .container {
@@ -113,7 +120,8 @@ font-size: 14px;
   max-width: 300px;
   margin: 0 auto;
 }
-.container:before, .container:after {
+.container:before,
+.container:after {
   content: "";
   display: block;
   clear: both;
@@ -138,23 +146,20 @@ font-size: 14px;
   text-decoration: none;
 }
 .container .info span .fa {
-  color: #EF3B3A;
+  color: #ef3b3a;
 }
 body {
-    background: #dfdfdf;
-    font-family: ibm-plex-thai, sans-serif;
+  background: #dfdfdf;
+  font-family: ibm-plex-thai, sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
 }
 
-@media (max-width: 945px){
-
-    .login-page {
-        padding-top: 100px;
-    }
-    body {
-        background: #dfdfdf;
-       
-    }
-   
+@media (max-width: 945px) {
+  .login-page {
+    padding-top: 100px;
+  }
+  body {
+    background: #dfdfdf;
+  }
 }
