--- a/css/webstyle.css
+++ b/css/webstyle.css
@@ -16,6 +16,29 @@ header {
   z-index: 999;
 }
 
+.hamburger-icon {
+  /* position: absolute; */
+  padding-top: 13px;
+  z-index: 1;
+  float: right;
+  line-height: 70px;
+  margin-right: 15px;
+  cursor: pointer;
+  display: none;
+}
+
+.hamburger-icon span {
+  height: 5px;
+  width: 35px;
+  background-color: #7db847;
+  display: block;
+  margin: 5px 0px 5px 0px;
+  transition: 0.7s ease-in-out;
+  transform: none;
+}
+#openmenu {
+  display: none;
+}
 .hidden {
   /* display: none; */
   opacity: 0;
@@ -242,6 +265,46 @@ header {
 }
 .form-reg .content .btn-submit input:hover {
   background-color: #3e8e41;
+}
+
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 19px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+  color: #fff;
 }
 
 #map {
@@ -571,6 +634,7 @@ footer div {
 
   .checkbtn {
     display: block;
+    padding-top: 5px;
   }
 
   .checkbtn2 {
@@ -636,7 +700,29 @@ footer div {
     color: #f5a821;
   }
 
-  #check:checked ~ ul.all-mainmenu {
+  /* #check:checked ~ ul.all-mainmenu {
+    right: 0;
+  } */
+  .hamburger-icon span:nth-of-type(1) {
+    background: #fff;
+  }
+  #openmenu:checked ~ .hamburger-icon span:nth-of-type(2) {
+    transform: translate(0%, 175%) rotate(-45deg);
+  }
+
+  #openmenu:checked ~ .hamburger-icon span:nth-of-type(3) {
+    transform: rotate(45deg);
+  }
+
+  #openmenu:checked ~ .hamburger-icon span:nth-of-type(1) {
+    opacity: 0;
+  }
+
+  #openmenu:checked ~ .hamburger-icon span:nth-of-type(4) {
+    opacity: 0;
+  }
+
+  #openmenu:checked ~ ul.all-mainmenu {
     right: 0;
   }
 
