--- a/css/tablestyle2.css
+++ b/css/tablestyle2.css
@@ -48,7 +48,7 @@ tr:hover {
 th {
   background: #478121;
   border-bottom: 2px solid #cae496;
-  color: #FFFFFF;
+  color: #ffffff;
   text-shadow: 1px 1px 1px #000000;
   height: 60px;
 }
@@ -131,7 +131,6 @@ th {
   width: 80%;
 }
 
-
 .card-manage .button-view {
   display: inline-block;
   width: 40%;
@@ -164,40 +163,60 @@ th {
   margin: 0 auto;
 }
 
-.search-input input {
-  font-family: FontAwesome;
-  -webkit-appearance: none;
-  height: 40px;
-  font-size: 14px;
-  box-sizing: border-box;
-  padding-left: 10px;
-  width: 30%;
-  border-radius: 5px;
-  border: 1px solid #e1e1e1;
-  float: right;
-}
-
 .search-group {
   width: 100%;
-  padding-bottom: 30px;
 }
 
 .search-input {
-  margin: 0 auto;
+  margin: auto;
+  text-align: right;
   width: 80%;
+}
 
+.search-input .input-icons i {
+  position: absolute;
+}
+
+.search-input .input-icons {
+  margin-left: auto;
+  margin-right: 0;
+  width: 30%;
+  margin-bottom: 10px;
+}
+
+.search-input .icon {
+  padding: 10px;
+  color: grey;
+  min-width: 50px;
+  text-align: center;
+}
+
+.search-input .input-field {
+  width: 100%;
+  padding: 7px;
+  text-align: left;
+  padding-left: 40px;
+  border-radius: 5px;
+  border: 2px;
+  border: 1px solid #e3e3e3;
+}
+
+.search-input .input-field:focus {
+  outline: none;
+  border-color: #dbdbdb;
+  box-shadow: 0 0 5px #dbdbdb;
 }
 
 @media (max-width: 968px) {
-.header-table {
-  text-align: center;
-  color: #5f5f5f;
-  font-size: 20px;
-  font-weight: 600;
-  padding-bottom: 10px;
-  padding-top: 10px;
-  width: 80%;
-  margin: 0 auto;
+  .header-table {
+    text-align: center;
+    color: #5f5f5f;
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    width: 80%;
+    margin: 0 auto;
   }
 
   .search-input input {
@@ -210,11 +229,18 @@ th {
     /* border-radius: 5px;
     border: 1px solid #e1e1e1;
     float: right; */
-}
-.search-input {
-  margin: 0 auto;
-  width: 90%;
-}
+  }
+  .search-input {
+    margin: 0 auto;
+    width: 90%;
+  }
 
-}
+  .search-input .input-icons {
+    margin: auto;
+    width: 80%;
+  }
 
+  .search-group {
+    padding-bottom: 20px;
+  }
+}
