--- a/css/webstyle.css
+++ b/css/webstyle.css
@@ -323,6 +323,23 @@ header {
   border: 1px solid #e1e1e1;
 }
 
+.form-reg .content select {
+  -webkit-appearance: none;
+  height: 40px;
+  font-size: 14px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  width: 90%;
+  border-radius: 5px;
+  border: 1px solid #e1e1e1;
+}
+
+.form-reg .content select:focus {
+  outline: none;
+  border-color: #9ecaed;
+  box-shadow: 0 0 5px #9ecaed;
+}
+
 .form-reg .content input::-webkit-input-placeholder {
   padding-left: 5px;
   color: #ccc;
