--- a/css/tablestyle2.css
+++ b/css/tablestyle2.css
@@ -70,6 +70,29 @@ th {
   height: 100%;
   width: 50%;
 }
+.btn-alert-condelete {
+  font-size: 20px;
+  background: #d8524e;
+  color: white;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-radius: 7px;
+  border: 0;
+}
+
+.btn-alert-cancle {
+  font-size: 20px;
+  background: #ccc;
+  color: #4c4c4c;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 7px;
+  border: 0;
+}
 .card-detail .detail-left .member-name {
   font-weight: 800;
   font-size: 22px;
