--- a/css/mem_profile.css
+++ b/css/mem_profile.css
@@ -1,5 +1,25 @@
 @import url("https://use.typekit.net/qwg8grf.css");
+::-webkit-scrollbar {
+  width: 15px;
+  border-radius:20px;
+}
 
+    /* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+    
+    /* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+    /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+      background: #555; 
+}
 .topic {
   font-family: ibm-plex-thai, sans-serif;
   text-align: center;
