--- a/css/tablestyle.css
+++ b/css/tablestyle.css
@@ -4,6 +4,28 @@ table {
   margin: auto;
 }
 
+::-webkit-scrollbar {
+  width: 15px;
+  border-radius:20px;
+}
+
+    /* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+    
+    /* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+    /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+      background: #555; 
+}
+
 th,
 td {
   text-align: center;
