--- a/css/webstyle2.css
+++ b/css/webstyle2.css
@@ -1,5 +1,27 @@
 @import url("https://use.typekit.net/qwg8grf.css");
 
+::-webkit-scrollbar {
+  width: 15px;
+  border-radius:20px;
+}
+
+    /* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+    
+    /* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+    /* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+      background: #555; 
+}
+
 .img-show {
   float: right;
   width: 50%;
