--- a/css/dash.css
+++ b/css/dash.css
@@ -1,257 +1,252 @@
 .noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
-
-.namepage{
- 
-    width: 100%;
-    font-size: 20px;
-    text-align: center;
-    font-weight: 600;
-    padding-bottom: 10px;
 }
 
+.namepage {
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 600;
+  padding-bottom: 10px;
+}
 
-.dashboard-container{
+.dashboard-container {
+  margin: auto;
+  width: 85%;
+}
+.group1 {
+  width: 100%;
+  background: saddlebrown;
+}
+.group2 {
+  width: 100%;
+  background: skyblue;
+}
+.map {
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  float: left;
+  width: 65%;
+}
+.counter {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  float: right;
+  width: 35%;
+}
+.statistic {
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  float: left;
+  width: 30%;
+}
+.farmlist {
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  float: right;
+  width: 70%;
+}
+.content-map {
+  width: 100%;
+  height: 510px;
+  background: #fff;
+}
+.content-counter {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+  height: 510px;
+  background: #fff;
+}
+
+.content-statistic {
+  width: 100%;
+  height: 400px;
+  background: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.content-farmlist {
+  width: 100%;
+  height: 400px;
+  background: #fff;
+}
+
+.title-dash {
+  width: 100%;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+.map-show {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+}
+
+.pie-show {
+  text-align: center;
+  width: 100%;
+}
+
+.farm-show {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 100%;
+}
+
+.counter-containner {
+  width: 100%;
+}
+.reg-pair {
+  padding-top: 10px;
+  width: 100%;
+}
+
+.reg-left {
+  padding-right: 10px;
+}
+
+.reg-right {
+  padding-left: 10px;
+}
+
+.title-inbox {
+  padding-left: 20px;
+  padding-top: 20px;
+  width: 100%;
+  color: #fff;
+}
+.value-inbox {
+  width: 100%;
+  font-size: 50px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.value-inbox .value {
+  float: left;
+  width: 55%;
+  height: 50px;
+  text-align: right;
+  font-size: 60px;
+  font-weight: 500;
+  margin-top: -15px;
+}
+
+.value-inbox .unit {
+  padding-top: 25px;
+  padding-left: 15px;
+  float: right;
+  text-align: left;
+  width: 45%;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.sm-left {
+  width: 70% !important;
+}
+.sm-right {
+  width: 30% !important;
+}
+
+.reg-all {
+  background: #f3f3f3;
+  width: 100%;
+  height: 140px;
+}
+
+.reg-cenrtal {
+  float: left;
+  background: #00c0ef;
+  width: 50%;
+  height: 140px;
+}
+.reg-north {
+  float: right;
+  background: #01a65a;
+  width: 50%;
+  height: 140px;
+}
+.reg-east {
+  float: left;
+  background: #f3bb0f;
+  width: 50%;
+  height: 140px;
+}
+.reg-southern {
+  float: right;
+  background: #dd4c39;
+  width: 50%;
+  height: 140px;
+}
+.dark {
+  color: #6b6b6b !important;
+}
+
+/* @media (min-width: 1140px) {
+    .pie-centent {
+      margin: auto;
+      width: 60%;
+    }
+  } */
+
+@media (min-width: 1140px) {
+  .pie-centent {
     margin: auto;
-    width: 85%;
-  
+    width: 70%;
+  }
 }
-.group1{
-    width: 100%;
-    background: saddlebrown;
-}
-.group2{
-    width: 100%;
-    background: skyblue;
-}
-.map{
-    padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    float: left;   
-    width: 65%;
-   
-    
-}
-.counter{ 
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
-    float: right;
-    width: 35%;
 
-    
+@media (min-width: 428px) and (max-width: 968px) {
+  .pie-centent {
+    margin: auto;
+    width: 50%;
+  }
 }
-.statistic{
-    padding-right: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px; 
+
+@media (max-width: 968px) {
+  .map {
+    padding-right: 0px;
     float: left;
-    width: 30%;
-
-    
-}
-.farmlist{
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    width: 100%;
+    display: none;
+  }
+  .counter {
+    padding-left: 0px;
     float: right;
-    width: 70%; 
-  
-}
-.content-map{
     width: 100%;
-   height: 510px;
-   background: #fff;
-}
-.content-counter{
-    padding-left: 10px;
-    padding-right: 10px;
-   width: 100%;
-   height: 510px;
-   background: #fff;
-}
-
-.content-statistic{
-    width: 100%;
-    height: 400px;
-    background: #fff;
-    padding-left: 10px;
-    padding-right: 10px;
- }
- .content-farmlist{
-     width: 100%;
-    height: 400px;
-    background: #fff;
- }
-
- .title-dash{
-     width: 100%;
-     text-align: center;
-     padding-top: 10px;
-     padding-bottom: 15px;
- }
-
- .map-show{
-     padding-left: 10px;
-     padding-right: 10px;
-     width: 100%;
- 
- }
-
- .pie-show{
-     text-align: center;
-        width: 100%;
-        height: 100px;
-        /* background: sienna; */
-
- }
-
- .farm-show{
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 100%;
-}
-
-.counter-containner{
-    width: 100%;
-
-}
-.reg-pair{
-
-    padding-top: 10px;
-    width: 100%;
-}
-
-.reg-left{
-    padding-right: 10px;
-}
-
-.reg-right{
-    padding-left: 10px;
-}
-
-
-.title-inbox{
-    padding-left: 20px;
-    padding-top: 20px;
-    width: 100%;
-    color: #fff;
-}
-.value-inbox{
-    width: 100%;
-    font-size: 50px;
-    font-weight: 700;
-    color: #fff;
-}
-
-.value-inbox .value{
-   
+  }
+  .statistic {
+    padding-right: 0px;
     float: left;
-    width: 55%;
-    height: 50px;
-    text-align: right;
-    font-size: 60px;
-    font-weight: 500;
-    margin-top: -15px;
-
-}
-
-.value-inbox .unit{
-    padding-top: 25px;
-    padding-left: 15px;
+    width: 100%;
+  }
+  .farmlist {
+    padding-left: 0px;
     float: right;
-    text-align: left;
-    width: 45%;
-    height: 50px;
-    font-size: 20px;
-    font-weight: 500;
-    
-}
-.sm-left{
+    width: 100%;
+  }
+  .value-inbox {
+    width: 100%;
+    text-align: center;
+  }
+  .sm-left {
     width: 70% !important;
-}
-.sm-right{
+  }
+  .sm-right {
     width: 30% !important;
+  }
 }
-
-.reg-all{
-    background: #f3f3f3;
-    width: 100%;
-    height: 140px;
-    
-}
-
-.reg-cenrtal{
-    
-    float: left;
-    background: #00c0ef;
-    width: 50%;
-    height: 140px;
-}
-.reg-north{
-    float: right;
-    background: #01a65a;
-    width: 50%;
-    height: 140px;
-}
-.reg-east{
-    float: left;
-    background: #f3bb0f;
-    width: 50%;
-    height: 140px;
-}
-.reg-southern{
-    float: right;
-    background: #dd4c39;
-    width: 50%;
-    height: 140px;
-}
-.dark{
-    color:#6b6b6b !important;
-}
-
- @media (max-width: 968px) {
-    .map{
-        padding-right: 0px;
-        float: left;   
-        width: 100%;
-        display: none;   
-    }
-    .counter{ 
-        padding-left: 0px;
-        float: right;
-        width: 100%;  
-    }
-    .statistic{
-        padding-right: 0px;
-        float: left;
-        width: 100%;       
-    }
-    .farmlist{
-        padding-left: 0px;
-        float: right;
-        width: 100%; 
-    }
-    .value-inbox{
-        width: 100%;
-        text-align: center;
-    }
-    .sm-left{
-        width: 70% !important;
-    
-    }
-    .sm-right{
-        width: 30% !important;
-    }
-
- 
-
- }
